// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render with 1 breadcrumb item and last is active 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-l-page-header pf-v6-c-page-header pf-v6-l-page__main-section pf-v6-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-:ra:"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v6-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-:rb:"
      data-ouia-component-type="PF6/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v6-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v6-c-breadcrumb__item"
        >
          <a
            data-ouia-component-id="breadcrumb-to-First item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            First item
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="pf-v6-l-split pf-m-gutter"
    >
      <div
        class="pf-v6-l-split__item"
      >
        <div
          class="pf-v6-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v6-u-flex-grow-1"
          >
            <h1
              class="pf-v6-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-:rc:"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v6-l-split__item pf-m-fill"
      />
      <div
        class="pf-v6-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with 2 breadcrumb items and last is active 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-l-page-header pf-v6-c-page-header pf-v6-l-page__main-section pf-v6-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-:ri:"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v6-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-:rj:"
      data-ouia-component-type="PF6/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v6-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v6-c-breadcrumb__item"
        >
          <a
            data-ouia-component-id="breadcrumb-to-First item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            First item
          </a>
        </li>
        <li
          class="pf-v6-c-breadcrumb__item"
        >
          <span
            class="pf-v6-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
          <a
            data-ouia-component-id="breadcrumb-to-Second item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            Second item
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="pf-v6-l-split pf-m-gutter"
    >
      <div
        class="pf-v6-l-split__item"
      >
        <div
          class="pf-v6-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v6-u-flex-grow-1"
          >
            <h1
              class="pf-v6-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-:rk:"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v6-l-split__item pf-m-fill"
      />
      <div
        class="pf-v6-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with 3 breadcrumb items and last is active 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-l-page-header pf-v6-c-page-header pf-v6-l-page__main-section pf-v6-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-:rm:"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v6-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-:rn:"
      data-ouia-component-type="PF6/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v6-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v6-c-breadcrumb__item"
        >
          <a
            data-ouia-component-id="breadcrumb-to-First item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            First item
          </a>
        </li>
        <li
          class="pf-v6-c-breadcrumb__item"
        >
          <span
            class="pf-v6-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
          <a
            data-ouia-component-id="breadcrumb-to-Second item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            Second item
          </a>
        </li>
        <li
          class="pf-v6-c-breadcrumb__item"
        >
          <span
            class="pf-v6-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
          <a
            data-ouia-component-id="breadcrumb-to-Third item"
            data-ouia-component-type="undefined-breadcrumb"
            href="/"
          >
            Third item
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="pf-v6-l-split pf-m-gutter"
    >
      <div
        class="pf-v6-l-split__item"
      >
        <div
          class="pf-v6-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v6-u-flex-grow-1"
          >
            <h1
              class="pf-v6-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-:ro:"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v6-l-split__item pf-m-fill"
      />
      <div
        class="pf-v6-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with empty breadcrumb 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-l-page-header pf-v6-c-page-header pf-v6-l-page__main-section pf-v6-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-:r6:"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v6-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-:r7:"
      data-ouia-component-type="PF6/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v6-c-breadcrumb__list"
        role="list"
      />
    </nav>
    <div
      class="pf-v6-l-split pf-m-gutter"
    >
      <div
        class="pf-v6-l-split__item"
      >
        <div
          class="pf-v6-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v6-u-flex-grow-1"
          >
            <h1
              class="pf-v6-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-:r8:"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v6-l-split__item pf-m-fill"
      />
      <div
        class="pf-v6-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with header Hello world 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-l-page-header pf-v6-c-page-header pf-v6-l-page__main-section pf-v6-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-:r3:"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-v6-l-split pf-m-gutter"
    >
      <div
        class="pf-v6-l-split__item"
      >
        <div
          class="pf-v6-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v6-u-flex-grow-1"
          >
            <h1
              class="pf-v6-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-:r4:"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            >
              Hello world
            </h1>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-l-split__item pf-m-fill"
      />
      <div
        class="pf-v6-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render with header as empty string 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-l-page-header pf-v6-c-page-header pf-v6-l-page__main-section pf-v6-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-:r0:"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-v6-l-split pf-m-gutter"
    >
      <div
        class="pf-v6-l-split__item"
      >
        <div
          class="pf-v6-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v6-u-flex-grow-1"
          >
            <h1
              class="pf-v6-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-:r1:"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v6-l-split__item pf-m-fill"
      />
      <div
        class="pf-v6-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Header component should render without to attribute 1`] = `
<DocumentFragment>
  <section
    class="pf-v6-l-page-header pf-v6-c-page-header pf-v6-l-page__main-section pf-v6-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-:re:"
    data-ouia-component-type="undefined-page-header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-v6-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-:rf:"
      data-ouia-component-type="PF6/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-v6-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v6-c-breadcrumb__item"
        >
          First item
        </li>
      </ol>
    </nav>
    <div
      class="pf-v6-l-split pf-m-gutter"
    >
      <div
        class="pf-v6-l-split__item"
      >
        <div
          class="pf-v6-l-flex pf-m-justify-content-space-between"
        >
          <div
            class="pf-v6-u-flex-grow-1"
          >
            <h1
              class="pf-v6-c-title pf-m-2xl"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-:rg:"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            />
          </div>
        </div>
      </div>
      <div
        class="pf-v6-l-split__item pf-m-fill"
      />
      <div
        class="pf-v6-l-split__item"
      />
    </div>
  </section>
</DocumentFragment>
`;
